@@ -18,6 +18,9 @@ committal in the CVS repository !
 
      ----------------------------------------------------------
 
+10 June 15:  V.Ivanchenko (emstand-V10-00-55)
+- G4UrbanMscModel - L.Urban revert back step limit algorithm modifications.
+
 30 April 15:  V.Ivanchenko (emstand-V10-00-54)
 - G4WentzelVIModel - repeat check on safety for each new step,
     in SampleScattering optimized use of random engine
